adjust footer link Protection Declaration

--- a/locales/en.json
+++ b/locales/en.json
@@ -2367,7 +2367,7 @@
 				"participate": "Participate",
 				"safety": "Security",
 				"status": "Status",
-				"termsOfUseHPI": "Terms of use"
+				"termsOfUse": "Terms of use"
 			}
 		},
 		"headline": {
