--- a/locales/es.json
+++ b/locales/es.json
@@ -2367,7 +2367,7 @@
 				"participate": "Participar",
 				"safety": "Seguridad",
 				"status": "Estado",
-				"termsOfUseHPI": "Condiciones de uso"
+				"termsOfUse": "Condiciones de uso"
 			}
 		},
 		"headline": {
