--- a/locales/de.json
+++ b/locales/de.json
@@ -2367,7 +2367,7 @@
 				"participate": "Mitmachen",
 				"safety": "Sicherheit",
 				"status": "Status",
-				"termsOfUseHPI": "Nutzungsordnung"
+				"termsOfUse": "Nutzungsordnung"
 			}
 		},
 		"headline": {
